# aa_auto_sdr

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  config.json.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  release-gate.yml  release.yml  tests.yml  update-badges.yml  version-sync.yml
benchmarks/: results.md  v1.7.2_count_only.py
docs/: CLI_REFERENCE.md  CONFIGURATION.md  INSTALLATION.md  LOGGING.md  LOGGING_STYLE.md  NOTION_SETUP.md  OUTPUT_FORMATS.md  QUICKSTART.md  QUICK_REFERENCE.md  SNAPSHOT_DIFF.md  TEMPLATE_WORKFLOW.md  USE_CASES.md
sample_outputs/: README.md  demo_prod.calculated_metrics.csv  demo_prod.classifications.csv  demo_prod.dimensions.csv  demo_prod.html  demo_prod.json  demo_prod.md  demo_prod.metrics.csv  demo_prod.segments.csv  demo_prod.summary.csv  demo_prod.virtual_report_suites.csv  demo_prod.xlsx  diff_console.txt  diff_report.json  diff_report.md  synthetic_snapshot_a.json  synthetic_snapshot_b.json
scripts/: build_sample_outputs.py  check_version_sync.py
src/aa_auto_sdr/: __init__.py  __main__.py
tests/: _notion_fakes.py  conftest.py  test_check_version_sync.py  test_main_fastpath.py  test_sample_outputs.py  test_version.py
tests/api/: test_cache.py  test_client.py  test_client_logging.py  test_fetch.py  test_fetch_classifications_outcome.py  test_fetch_count_only.py  test_fetch_coverage.py  test_fetch_listing_page_size.py  test_fetch_logging.py  test_fetch_nan_guards.py  test_fetch_outcome.py  test_fetch_report_suite_once.py  test_fetch_segments_raw.py  test_fetch_vrs_full_expansion_only.py  test_fetch_vrs_ladder.py  test_fetch_vrs_outcome.py  test_fetch_vrs_parent_filter.py  test_fetch_vrs_resilience.py  test_models.py  test_read_only_contract.py  test_resilience.py  test_resilience_integration.py  test_resilience_permanent_keyerror.py  test_resolve_rsid.py  test_resolve_rsid_name_match.py  test_retry_threading.py
tests/cli/: test_agent_mode_logging.py  test_agent_mode_mutex.py  test_agent_mode_preset.py  test_agent_mode_smoke.py  test_agent_output_resolver.py  test_batch_coverage.py  test_batch_workers_flags.py  test_cli_notion.py  test_commands_batch.py  test_commands_batch_v121.py  test_commands_completion.py  test_commands_config.py  test_commands_config_v12.py  test_commands_diff.py  test_commands_diff_v12.py  test_commands_discovery.py  test_commands_exit_codes.py  test_commands_generate.py  test_commands_generate_v12.py  test_commands_generate_v121.py  test_commands_inspect.py  test_commands_interactive.py  test_commands_logging.py  test_commands_profiles.py  test_commands_profiles_v12.py  test_commands_snapshots.py  test_commands_stats.py  test_compare_with_prev.py  test_describe_reportsuite_fetch_status.py  test_filters.py  test_fix_sweep_v1216.py  test_generate_coverage.py  test_inventory.py  test_list_classification_datasets_banner.py  test_list_output.py  test_list_output_helpers.py  test_main_coverage.py  test_main_dispatch.py  test_main_dispatch_logging.py  test_main_logging.py  (+28 more)
tests/core/: test_colors.py  test_confirm.py  test_constants.py  test_credentials_logging.py  test_credentials_resolve.py  test_credentials_type.py  test_exceptions.py  test_exit_codes.py  test_json_io.py  test_logging_coverage.py  test_logging_exc_text_json.py  test_logging_info_budget.py  test_logging_json_format.py  test_logging_quiet.py  test_logging_redaction.py  test_logging_redaction_regression.py  test_logging_run_mode.py  test_logging_setup.py  test_logging_stack_info_redaction.py  test_logging_vocabulary.py  test_micro_optimizations.py  test_ndjson_schema_golden.py  test_open.py  test_profiles.py  test_profiles_logging.py  test_run_summary.py  test_timings.py
tests/docs/: test_agents_md_canonical_sections.py
tests/fixtures/: sample_rs.json
tests/integration/: test_e2e.py  test_v1_1_e2e.py  test_v1_2_e2e.py
tests/meta/: test_exit_code_completeness.py  test_light_import_path.py  test_logs_dir_gitignored.py  test_no_direct_logging_outside_core.py  test_no_legacy_1_4_paths.py  test_no_sdk_leakage.py  test_read_only_aa.py
tests/output/: test_csv_coverage.py  test_diff_console_coverage.py  test_diff_console_theme.py  test_diff_filters_suppression.py  test_diff_pr_comment_coverage.py  test_diff_renderer_console.py  test_diff_renderer_json.py  test_diff_renderer_markdown.py  test_diff_renderer_modes.py  test_diff_renderer_pr_comment.py  test_diff_renderers_summary_suppression.py  test_diff_renderers_suppressed.py  test_error_envelope.py  test_excel_template_coverage.py  test_formula_neutralization.py  test_helpers.py  test_notion_blocks.py  test_notion_blocks_coverage.py  test_notion_client_guard.py  test_notion_client_guard_coverage.py  test_notion_database.py  test_notion_prune.py  test_notion_registry.py  test_notion_registry_coverage.py  test_notion_writer.py  test_registry.py  test_registry_template_swap.py  test_render_records_footers.py  test_template_anchors.py  test_trending_markdown_coverage.py  test_trending_renderers.py  test_watch_event.py  test_writer_asdict_hoist.py  test_writer_csv.py  test_writer_excel.py  test_writer_html.py  test_writer_json.py  test_writer_logging.py  test_writer_markdown.py
tests/pipeline/: test_batch.py  test_batch_dispatch.py  test_batch_logging.py  (+12 more)
(+139 files in other folders)
