[project]
name = "aa-auto-sdr"
dynamic = ["version"]
description = "Adobe Analytics SDR Generator with snapshot diffing (API 2.0 only)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "aanalytics2>=0.4.0",
    "pandas>=2.3.3,<3",
    "xlsxwriter>=3.2.9",
]

[project.urls]
Homepage = "https://github.com/brian-a-au/aa_auto_sdr"
Repository = "https://github.com/brian-a-au/aa_auto_sdr"

[project.scripts]
aa_auto_sdr = "aa_auto_sdr.__main__:main"
"aa-auto-sdr" = "aa_auto_sdr.__main__:main"

[project.optional-dependencies]
env = ["python-dotenv>=1.0.0"]
completion = ["argcomplete>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/aa_auto_sdr/core/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aa_auto_sdr"]

[tool.hatch.build.targets.sdist]
include = ["/src", "pyproject.toml", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "openpyxl>=3.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "RUF",
    "PERF", "DTZ", "RET", "S", "C4", "PT", "PIE", "ISC",
    "TID", "A", "PLE", "RSE", "PLW", "T", "LOG", "ARG",
    "FURB", "FLY", "FA", "YTT", "PD", "SLOT", "ICN",
    "EXE", "INT", "INP", "ERA", "Q", "COM", "TCH",
]
ignore = [
    "E501",    # line too long (formatter handles)
    "SIM108",  # ternary operator (readability preference)
    "S101",    # assert (used in tests + invariant checks)
    "S603",    # subprocess call (legitimate in snapshot/git.py)
    "S607",    # subprocess partial path ('git' on PATH is fine)
    "COM812",  # trailing-comma-missing (formatter handles)
    "ISC001",  # implicit string concat (formatter handles)
    "RUF002",  # ambiguous unicode in docstrings (we use § for spec refs)
    "RUF003",  # ambiguous unicode in comments (same)
    "TC001",   # type-checking imports (we use `from __future__ import annotations` instead)
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/aa_auto_sdr/__main__.py"          = ["T201"]
"src/aa_auto_sdr/cli/main.py"          = ["T201"]
"src/aa_auto_sdr/cli/commands/*.py"    = ["T201"]
"src/aa_auto_sdr/cli/list_output.py"   = ["T201"]
"src/aa_auto_sdr/output/diff_renderers/console.py" = ["T201"]
"src/aa_auto_sdr/api/fetch.py"         = ["T201"]   # warning: stderr print for classifications fallback
"tests/**/*.py"                        = ["S101", "S105", "S106", "S108", "ARG001", "ARG002", "PLR2004", "T201", "PT004", "PT011", "A002"]
"scripts/*.py"                         = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=aa_auto_sdr --cov-report=term-missing --cov-fail-under=70"
markers = [
    "unit: fast unit tests with no I/O",
    "integration: end-to-end with mocked SDK",
    "smoke: subprocess CLI smoke tests",
    "e2e: real-API tests, gated by env var",
]
